--- a/web_static/css/lifegiver.css
+++ b/web_static/css/lifegiver.css
@@ -21,11 +21,15 @@ body {
 }
 
 footer {
-    background-color: #333;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     position: absolute;
     bottom: 0;
     width: 100%;
 }
+  
+  
+
+
