--- a/web_static/css/footer.css
+++ b/web_static/css/footer.css
@@ -1,9 +1,48 @@
 footer {
-    background-color: white;
-    color: black;
+    padding-top: calc(var(--section-padding) / 2);
+    padding-bottom: calc(var(--section-padding) / 2);
+    background-color: #fa1919;
+    position: relative;
+    color: white;
     text-align: center;
-    padding: 10px;
+}
+
+footer::before {
+    content: "";
     position: absolute;
-    bottom: 0;
+    left: 0;
+    top: 0;
     width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+}
+
+footer .container {
+    position: relative;
+}
+
+footer a {
+    margin-bottom: 20px;
+    text-decoration: none;
+    font-size: 50px;
+    font-family: "Acme", sans-serif;
+    color: white;
+}
+
+footer p a:not(.copyright) {
+    text-transform: uppercase;
+    padding: 20px;
+    border-bottom: 1px solid white;
+    font-size: 22px;
+    width: fit-content;
+    margin: 20px auto;
+}
+
+footer .social-icons i {
+    padding: 10px 15px;
+}
+
+footer p a {
+    font-weight: bold;
+    color: white;
 }
