--- a/web_static/css/header.css
+++ b/web_static/css/header.css
@@ -1,23 +1,118 @@
+:root {
+  --main-color: #fa1919;
+  --transparent-color: rgb(15 116 143 / 70%);
+  --section-padding: 100px;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color:white;
+  list-style: none;
+}
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Small */
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
   }
-  
-  li {
-    float: left;
+}
+
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
   }
-  
-  li a {
-    display: block;
-    color: blue;
-    text-align: center;
-    padding: 16px;
-    text-decoration-style: unset;
+}
+
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
   }
-  
-  li a:hover {
-    background-color: rgb(190, 177, 177);
+}
+
+header {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  min-height: 97px;
+}
+
+
+header .logo {
+  padding: 10px 20px;
+  display: block;
+  color: white;
+  background-color: #fa1919;
+  border-radius: 100px;
+  text-decoration: none;
+  font-size: 50px;
+  font-family: "Acme", sans-serif;
+}
+
+header nav {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+header nav ul {
+  display: flex;
+}
+
+@media (max-width: 767px) {
+  header nav ul {
+    display: none;
   }
+
+
+  header nav ul li a {
+    padding: 15px !important;
+  }
+}
+
+header nav ul li a {
+  padding: 40px 10px;
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+  transition: 0.3s;
+  position: relative;
+  z-index: 2;
+}
+
+header nav ul li a:hover {
+  color: var(--main-color);
+}
