--- a/web_static/css/footer.css
+++ b/web_static/css/footer.css
@@ -38,8 +38,10 @@ footer p a:not(.copyright) {
     margin: 20px auto;
 }
 
-footer .social-icons i {
-    padding: 10px 15px;
+footer p img {
+    width: 30px;
+    position: relative;
+    top: 9px;
 }
 
 footer p a {
