--- a/web_static/css/header.css
+++ b/web_static/css/header.css
@@ -104,7 +104,7 @@ header nav ul {
 header nav ul li a {
   padding: 40px 10px;
   display: block;
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 20px;
   font-weight: 600;
