--- a/web_static/css/2-style.css
+++ b/web_static/css/2-style.css
@@ -1,5 +1,5 @@
 .landing {
-  min-height: 130vh;
+  min-height: 110vh;
   background-color: white;
   /* background-image: url("../images/nguy-n-hi-p-2rNHliX6XHk-unsplash.jpg"); */
   background-size: cover;
@@ -13,7 +13,7 @@
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 1000px;
-  height: 700px;
+  height: 600px;
   padding: 25px;
   background: transparent;
   border: 2px solid rgb(255, 255, 255, .2);
@@ -32,6 +32,7 @@
 
 .landing .card .imgBx img {
   width: 100%;
+  padding-top: 90px;
 }
 
 .landing .card .infrBx {
@@ -43,9 +44,8 @@
 
 .landing .card .infrBx h1 {
   color: #fa1919;
+  padding-bottom: 10px;
 }
-
-
 
 .input_feild {
   display: flex;
@@ -71,28 +71,23 @@
   padding: 0 10px;
 }
 
-.input_feild select {
-  height: 40px;
-  width: 70%;
-  border-radius: 7px;
-  outline: none;
-  border: 1px solid grey;
-  padding: 0 10px;
-}
-
-button {
+.landing .card .infrBx button {
   display: block;
   width: 40%;
+  height:50px;
   margin-top: 10px;
   font-size: 20px;
   padding: 10px;
+  margin-right: 55px;
+  margin-top: 30px;
   border: none;
   border-radius: 3px;
   color: rgb(209, 209, 209);
   background: #fa1919;
+  z-index: 2;
 }
 
-button:hover {
+.landing .card .infrBx button:hover {
   background: #fa1919;
   color: rgb(255, 255, 255);
   cursor: pointer;
