--- a/Lifegiver_test/lifegiver/templates/layout.html
+++ b/Lifegiver_test/lifegiver/templates/layout.html
@@ -49,6 +49,7 @@
                     <a class="nav-item nav-link" href="{{ url_for('donor_dashboard') }}">Donor Dashboard</a>
                 {% elif session.get('user_type') == 'hospital' %}
                     <a class="nav-item nav-link" href="{{ url_for('new_request') }}">New Donation Request</a>
+                    <a class="nav-item nav-link" href="{{ url_for('new_urgent_request') }}">Urgent Request</a>
                     <a class="nav-item nav-link" href="{{ url_for('hospital_dashboard') }}">Hospital Dashboard</a>
                 {% endif %}
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
