Updated the request donation

--- a/Lifegiver_test/lifegiver/templates/donor_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/donor_dashboard.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="container">
-        <h1 class="border-bottom mb-4">Your Donation Count is : {{ requests.total }}</h1>
+        <h1 class="border-bottom mb-4">Your Donation Count is : {{ current_user.donation_count }}</h1>
       </div>
         
     
