--- a/Lifegiver_test/lifegiver/templates/schedule_donation.html
+++ b/Lifegiver_test/lifegiver/templates/schedule_donation.html
@@ -1,37 +1,32 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 
 {% block content %}
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="mb-0">Schedule Donation</h2>
-                </div>
-                <div class="card-body">
-                    <form method="POST">
-                        {{ form.hidden_tag() }}
-                        <fieldset class="form-group">
-                            <legend class="border-bottom mb-4">Please schedule your donation:</legend>
-                            <div class="form-group">
-                                {{ form.donation_date.label(class="form-control-label") }}
-                                {% if form.donation_date.errors %}
-                                    {{ form.donation_date(class="form-control form-control-lg is-invalid") }}
-                                    <div class="invalid-feedback">
-                                        {% for error in form.donation_date.errors %}
-                                            <span>{{ error }}</span>
-                                        {% endfor %}
-                                    </div>
-                                {% else %}
-                                    {{ form.donation_date(class="form-control form-control-lg") }}
-                                {% endif %}
-                            </div>
-                            <button type="submit" class="btn btn-primary">Schedule Donation</button>
-                        </fieldset>
-                    </form>
-                </div>
+
+<div class="content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <div class="form-group">
+                {{ form.donation_date.label(class="form-control-label") }}
+                {% if form.donation_date.errors %}
+                    {{ form.donation_date(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.donation_date.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.donation_date(class="form-control form-control-lg") }}
+                {% endif %}
             </div>
+            
+            
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
         </div>
-    </div>
-</div>
-{% endblock content %}
+    </form>
+</div>  
+
+{% endblock content%}
