--- a/Lifegiver_test/lifegiver/templates/urgent_request_by_id.html
+++ b/Lifegiver_test/lifegiver/templates/urgent_request_by_id.html
@@ -21,6 +21,9 @@
          
             <p class="article-content">{{ 'Expiration date: ' ~ request.expiration_date.strftime('%Y-%m-%d') }}</p>
           </div>
+          <div>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgent_donation', don_request_id=request.hospital_urgent_request.id) }}">Donate</a>
+          </div>
         </article>
         <!-- Modal to show an alert to confirm befor deleting-->
 
