--- a/Lifegiver_test/lifegiver/templates/schedule_donation.html
+++ b/Lifegiver_test/lifegiver/templates/schedule_donation.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <div class="content-section">
-    <form method="POST" action="">
+    <form method="POST" action="{{ url_for('schedule_donation', don_request_id=don_request.id) }}">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <legend class="border-bottom mb-4">Schedule your donation</legend>
             <div class="form-group">
                 {{ form.donation_date.label(class="form-control-label") }}
                 {% if form.donation_date.errors %}
