Updated the templates: requests, urgent_requests, request_by_id, urgent_request_by_id, hospital_requests, hospital_urgent_requests - To make sure that the donate and schedule buttons are not showing to a user that is not a loged in donor

--- a/Lifegiver_test/lifegiver/templates/hospital_urgent_requests.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_urgent_requests.html
@@ -17,6 +17,15 @@
          
             <p class="article-content">{{ 'Expiration date: ' ~ req.expiration_date.strftime('%Y-%m-%d') }}</p>
           </div>
+          <!-- A condition to show the button just when the user is a donor-->
+          <div>
+            {% if current_user.is_authenticated %}
+                {% if session.get('user_type') == 'donor' %}
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgent_donation', don_request_id=request.hospital_urgent_request.id) }}">Donate Now</a>
+                {% endif %}
+            {% else %}
+            {% endif %}
+          </div>
         </article>
     {% endfor %}
     
