--- a/Lifegiver_test/lifegiver/templates/requests.html
+++ b/Lifegiver_test/lifegiver/templates/requests.html
@@ -15,8 +15,17 @@
 
             <p class="article-content">{{ 'Expiration date: ' ~ request.expiration_date.strftime('%Y-%m-%d') }}</p>
           </div>
+          <!-- A condition to show the button just when the user is a donor-->
           <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('schedule_donation', don_request_id=request.id) }}">Schedule Donation</a>
+            {% if current_user.is_authenticated %}
+                {% if session.get('user_type') == 'donor' %}
+                  <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('schedule_donation', don_request_id=request.id) }}">Schedule Donation</a>
+                {% endif %}
+            {% else %}
+            {% endif %}
+
+
+            
           </div>
          
     {% endfor %}
