Updated the templates: requests, urgent_requests, request_by_id, urgent_request_by_id, hospital_requests, hospital_urgent_requests and Added two new templates : Donation_history and hospital_history - To add donation history for donors and requests history for hospitals and fixed bugs in some routes

--- a/Lifegiver_test/lifegiver/templates/hospital_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_dashboard.html
@@ -9,9 +9,9 @@
         </div>
       </div>
       <div class="container">
-        <h1 class="border-bottom mb-4">Total Donation Requests : <a class="mr-2" href="{{ url_for('hospital_requests', name=current_user.name) }}">{{ requests_count }}</a></h1>
+        <h1 class="border-bottom mb-4">Total Donation Requests : <a class="mr-2" href="{{ url_for('requests_history', name=current_user.name) }}">{{ requests_count }}</a></h1>
 
-        <h1 class="border-bottom mb-4">Total Urgent Donation Requests : <a class="mr-2" href="{{ url_for('hospital_requests', name=current_user.name) }}">{{ urgent_requests_count }}</a></h1>
+        <h1 class="border-bottom mb-4">Total Urgent Donation Requests : <a class="mr-2" href="{{ url_for('hospital_urgent_requests', name=current_user.name) }}">{{ urgent_requests_count }}</a></h1>
 
       </div>
     </div>
