--- a/Lifegiver_test/lifegiver/templates/donor_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/donor_dashboard.html
@@ -4,12 +4,12 @@
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
-          <h2 class="account-heading">{{ current_user.username }}</h2>
+          <h2 class="account-heading">{{ current_user.first_name ~ ' ' ~ current_user.last_name }}</h2>
           <p class="text-secondary">{{ current_user.email }}</p>
         </div>
       </div>
       <div class="container">
-        <h1 class="border-bottom mb-4">Your Donation Count is : {{ current_user.donation_count }}</h1>
+        <h1 class="border-bottom mb-4">Your Donation Count is : <a class="mr-2" href="{{ url_for('donation_history', donor_id=current_user.id) }}">{{ current_user.donation_count }}</a></h1>
       </div>
         
     
@@ -22,16 +22,29 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Account Info</legend>
             <div class="form-group">
-                {{ form.username.label(class="form-control-label") }}
-                {% if form.username.errors %}
-                    {{ form.username(class="form-control form-control-lg is-invalid") }}
+                {{ form.first_name.label(class="form-control-label") }}
+                {% if form.first_name.errors %}
+                    {{ form.first_name(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.username.errors %}
+                        {% for error in form.first_name.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.username(class="form-control form-control-lg") }}
+                    {{ form.first_name(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.last_name.label(class="form-control-label") }}
+                {% if form.last_name.errors %}
+                    {{ form.last_name(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.last_name.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.last_name(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
