--- a/Lifegiver_test/lifegiver/templates/create_urgent_request.html
+++ b/Lifegiver_test/lifegiver/templates/create_urgent_request.html
@@ -60,6 +60,10 @@
                     {{ form.expiration_date(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <div class="form-group">
+                <label class="form-control-label" for="send_notifications">Send Notifications to Nearby Donors</label>
+                <input type="checkbox" id="send_notifications" name="send_notifications">
+            </div>
             
         </fieldset>
         <div class="form-group">
